getting Dockerfile working

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:noble
 # Install C/C++ dev tools and basic tools (git, cmake, ripgrep, etc.)
 RUN apt-get update -y && \
     apt-get install -y --no-install-recommends \
-        build-essential cmake git \
+        build-essential cmake git gnupg2 \
         python3-pip python3-dev  \
         ripgrep  && \
     apt-get clean
