--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,9 +4,7 @@
 		"dockerfile": "Dockerfile",
 		"context": "../"
 	},
-	"mounts": [
-		{"type": "bind", "source": "${env:HOME}${env:USERPROFILE}/.gnupg/pubring.kbx", "target": "/root/.gnupg/pubring.kbx"},
-		{"type": "bind", "source": "${env:HOME}${env:USERPROFILE}/.gnupg/private-keys-v1.d", "target": "/root/.gnupg/private-keys-v1.d"},
-		{"type": "bind", "source": "${env:HOME}${env:USERPROFILE}/.gnupg/trustdb.gpg", "target": "/root/.gnupg/trustdb.gpg"}
-	]
+	"features": {
+		"ghcr.io/devcontainers/features/docker-outside-of-docker:1": { }
+	}
 }
