--- a/.gitmodules
+++ b/.gitmodules
@@ -2,7 +2,13 @@
 	path = extern/pybind11
 	url = https://github.com/pybind/pybind11.git
 	branch = stable
+
 [submodule "extern/asmjit"]
 	path = extern/asmjit
 	url = https://github.com/asmjit/asmjit.git
+	branch = master
+
+[submodule "extern/binder"]
+	path = extern/binder
+	url = https://github.com/RosettaCommons/binder.git
 	branch = master
